Added create user modal.

--- a/web/src/app/login/login.page.html
+++ b/web/src/app/login/login.page.html
@@ -14,17 +14,16 @@
               <ion-row>
                 <ion-col>
                   <ion-item>
-                    <ion-input 
-                      placeholder="Username"
-                      formControlName="username"></ion-input>
+                    <ion-label position="floating">Username</ion-label>
+                    <ion-input formControlName="username"></ion-input>
                   </ion-item>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col>
                   <ion-item>
-                    <ion-input 
-                      placeholder="Password" 
+                    <ion-label position="floating">Password</ion-label>
+                    <ion-input
                       type="password" 
                       formControlName="password"></ion-input>
                   </ion-item>
