--- a/web/src/global.scss
+++ b/web/src/global.scss
@@ -9,3 +9,33 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+.custom-popover .popover-content {
+	width: 60%;
+}
+
+.input-hidden {
+    position: absolute !important;
+    left: -999em !important;
+}
+
+.m-0 {
+    margin: 0px;
+}
+
+.m-b-15 {
+    margin-bottom: 15px;
+}
+
+.p-25 {
+    padding: 25px;
+}
+
+ion-toast.toast-success {
+    --background: green !important;
+}
+
+ion-toast.toast-danger {
+    --background: #d32f2f !important;
+}
+  
