--- a/web/src/app/admin/accounts/accounts.page.html
+++ b/web/src/app/admin/accounts/accounts.page.html
@@ -11,42 +11,40 @@
       <ion-col size="3">
         <b>Name</b>
       </ion-col>
-      <ion-col size="2">
+      <ion-col size="3">
         <b>Email</b>
       </ion-col>
       <ion-col size="2">
         <b>Mobile Number</b>
       </ion-col>
-      <ion-col size="2">
+      <ion-col size="3">
         <b>Role</b>
       </ion-col>
-      <ion-col size="2">
+      <ion-col size="1">
         <b>Status</b>
       </ion-col>
     </ion-row>
-    <ion-row class="border-bottom log" align-items-center *ngFor="let user of users">
+    <ion-row 
+      class="border-bottom log p-t-b-10" 
+      align-items-center *ngFor="let user of users"
+      (click)="viewUser(user)">
       <ion-col size="3">
-        {{ user.name }}
+        {{ user.firstName + ' ' + user.lastName }}
       </ion-col>
-      <ion-col size="2">
+      <ion-col size="3">
         {{ user.email }}
       </ion-col>
       <ion-col size="2">
         {{ user.mobileNumber }}
       </ion-col>
-      <ion-col size="2">
+      <ion-col size="3">
         {{ user.role }}
       </ion-col>
-      <ion-col size="1">
-        {{ user.isActive }}
+      <ion-col size="1" *ngIf="user.isActive">
+        Active
       </ion-col>
-      <ion-col>
-        <ion-button size="small" color="success">
-          <ion-icon name="create"></ion-icon>
-        </ion-button>
-        <ion-button size="small">
-          <ion-icon name="eye"></ion-icon>
-        </ion-button>
+      <ion-col size="1" *ngIf="!user.isActive">
+        Inactive
       </ion-col>
     </ion-row>
   </ion-grid>
