--- a/web/src/app/admin/accounts/accounts-view/accounts-view.page.html
+++ b/web/src/app/admin/accounts/accounts-view/accounts-view.page.html
@@ -126,98 +126,13 @@
     </ng-container>
     <ion-row>
       <ion-col text-right>
-        <ion-button (click)="isEdit = true">
+        <ion-button (click)="updateUser()">
           Edit Information
         </ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
   <!-- END OF PERSONAL INFORMATION TAB (VIEW ONLY) -->
-
-  <!-- START OF PERSONAL INFORMATION TAB (EDIT) -->
-  <ion-grid padding fixed *ngIf="currentTab === 'PERSONAL_INFORMATION' && isEdit">
-    <form [formGroup]="accountForm">
-      <ion-list>
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">Account Type</ion-label>
-              <ion-select 
-                interface="popover" 
-                placeholder="Select Account Type"
-                [value]="userType"
-                [(ngModel)]="userType"
-                formControlName="accountType"
-                (ionChange)="resolveAccountType()">
-                <ion-select-option [value]="USER_TYPE_VALUES[u]" *ngFor="let u of USER_TYPE_KEYS">
-                  {{ USER_TYPE_VALUES[u] }}
-                </ion-select-option>
-              </ion-select>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row class="student-number-input" [ngClass]="{'input-hidden': userType !== USER_TYPE_VALUES.STUDENT}">
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">Student Number</ion-label>
-              <ion-input formControlName="studentNumber" type="number"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">First Name</ion-label>
-              <ion-input formControlName="firstName"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">Middle Name</ion-label>
-              <ion-input formControlName="middleName"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">Last Name</ion-label>
-              <ion-input formControlName="lastName"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">Email</ion-label>
-              <ion-input formControlName="email" type="email"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">Mobile Number</ion-label>
-              <ion-input formControlName="mobile" type="number"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row text-right>
-          <ion-col size="12">
-            <ion-button color="light" (click)="isEdit = false">
-              Cancel
-            </ion-button>
-            <ion-button [disabled]="accountForm.invalid || callInProgress" (click)="updateAccount()">
-              <ion-label>Update</ion-label>
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-list>
-    </form>
-  </ion-grid>
-  <!-- END OF PERSONAL INFORMATION TAB (EDIT) -->
 
   <!-- START OF ROTATIONS TAB -->
   <ion-grid padding fixed *ngIf="currentTab === 'ROTATIONS'">
