--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -10,10 +10,10 @@
       <ion-content>
         <ion-list lines="none">
           <ion-menu-toggle auto-hide="false">
-            <ion-item button href="">
+            <ion-item a [routerLink]="['/admin/accounts']">
               <ion-label>Accounts</ion-label>
             </ion-item>      
-            <ion-item button href="apis">
+            <ion-item a [routerLink]="['/admin/fields']">
               <ion-label>Fields</ion-label>
             </ion-item>
           </ion-menu-toggle>
