--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -16,6 +16,9 @@
             <ion-item a [routerLink]="['/admin/fields']">
               <ion-label>Fields</ion-label>
             </ion-item>
+            <ion-item a [routerLink]="['/admin/schedules']">
+              <ion-label>Schedules</ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
