--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -16,8 +16,14 @@
             <ion-item a [routerLink]="['/admin/fields']">
               <ion-label>Fields</ion-label>
             </ion-item>
+            <ion-item a [routerLink]="['/admin/field-groups']">
+              <ion-label>Field Groups</ion-label>
+            </ion-item>
             <ion-item a [routerLink]="['/admin/schedules']">
               <ion-label>Schedules</ion-label>
+            </ion-item>
+            <ion-item a [routerLink]="['/admin/schedules-overview']">
+              <ion-label>Overview of Schedules</ion-label>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
