--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -25,6 +25,9 @@
             <ion-item a [routerLink]="['/admin/schedules-overview']">
               <ion-label>Overview of Schedules</ion-label>
             </ion-item>
+            <ion-item a [routerLink]="['/admin/group-assignments']">
+              <ion-label>Group Assignments</ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
