--- a/web/src/app/admin/accounts/accounts-update/accounts-update.page.html
+++ b/web/src/app/admin/accounts/accounts-update/accounts-update.page.html
@@ -74,8 +74,8 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Mobile Number</ion-label>
-              <ion-input formControlName="mobile" type="number"></ion-input>
+              <ion-label>Active</ion-label>
+              <ion-checkbox slot="start" formControlName="isActive"></ion-checkbox>
             </ion-item>
           </ion-col>
         </ion-row>
