--- a/web/src/app/admin/accounts/accounts-view/accounts-view.page.html
+++ b/web/src/app/admin/accounts/accounts-view/accounts-view.page.html
@@ -61,7 +61,7 @@
         </ion-label>
       </ion-col>
       <ion-col size="8">
-        <ion-label>{{ user.firstName + ' ' + user.lastName }}</ion-label>
+        <ion-label>{{ user.firstName + ' ' + user.middleName + ' ' + user.lastName }}</ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
