--- a/web/src/app/admin/fields/fields-update/fields-update.page.html
+++ b/web/src/app/admin/fields/fields-update/fields-update.page.html
@@ -43,6 +43,14 @@
             </ion-item>
           </ion-col>
         </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label>Active</ion-label>
+              <ion-checkbox slot="start" formControlName="isActive"></ion-checkbox>
+            </ion-item>
+          </ion-col>
+        </ion-row>
         <ion-row text-right>
           <ion-col size="12">
             <ion-button color="light" (click)="dismiss()">
