--- a/web/src/app/admin/accounts/accounts-create/accounts-create.page.html
+++ b/web/src/app/admin/accounts/accounts-create/accounts-create.page.html
@@ -70,7 +70,8 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <!-- TODO: Move to student update -->
+        <!-- <ion-row>
           <ion-col>
             <ion-item>
               <ion-label position="floating">Mobile Number</ion-label>
@@ -81,19 +82,11 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Username</ion-label>
-              <ion-input formControlName="username"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-item>
               <ion-label position="floating">Password</ion-label>
               <ion-input formControlName="password" type="password"></ion-input>
             </ion-item>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
         <ion-row text-right>
           <ion-col size="12">
             <ion-button color="light" (click)="dismiss()">
