--- a/web/src/app/admin/accounts/accounts.page.html
+++ b/web/src/app/admin/accounts/accounts.page.html
@@ -29,7 +29,7 @@
       align-items-center *ngFor="let user of users"
       (click)="viewUser(user)">
       <ion-col size="3">
-        {{ user.firstName + ' ' + user.lastName }}
+        {{ user.firstName + ' ' + user.middleName + ' ' + user.lastName }}
       </ion-col>
       <ion-col size="3">
         {{ user.email }}
