Added rotations/create page.

--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -28,6 +28,9 @@
             <ion-item a [routerLink]="['/admin/group-assignments']">
               <ion-label>Group Assignments</ion-label>
             </ion-item>
+            <ion-item a [routerLink]="['/admin/rotations']">
+              <ion-label>Rotations</ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
