--- a/web/src/app/admin/field-groups/field-groups-view/field-groups-view.page.html
+++ b/web/src/app/admin/field-groups/field-groups-view/field-groups-view.page.html
@@ -11,13 +11,23 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="4">
+      <ion-col size="3">
         <ion-label>
           <b>Fields</b>
         </ion-label>
       </ion-col>
-      <ion-col size="8">
+      <ion-col size="9">
         <ion-label>{{ fieldGroup.name }}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="3">
+        <ion-label>
+          <b>Rotation Type</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="9">
+        <ion-label>{{ fieldGroup.rotationType }}</ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
