--- a/web/src/app/admin/field-groups/field-groups.page.html
+++ b/web/src/app/admin/field-groups/field-groups.page.html
@@ -8,8 +8,11 @@
       </ion-col>
     </ion-row>
     <ion-row class="border-bottom">
-      <ion-col size="10">
+      <ion-col size="7">
         <b>Name</b>
+      </ion-col>
+      <ion-col size="3">
+        <b>Rotation Type</b>
       </ion-col>
       <ion-col size="2">
         <b>Status</b>
@@ -19,8 +22,11 @@
       class="border-bottom log p-t-b-10" 
       align-items-center *ngFor="let g of fieldGroups"
       (click)="viewFieldGroup(g)">
-      <ion-col size="10">
+      <ion-col size="7">
         {{ g.name }}
+      </ion-col>
+      <ion-col size="3">
+        {{ g.rotationType }}
       </ion-col>
       <ion-col size="2" *ngIf="g.isActive">
         Active
