--- a/web/src/app/admin/admin.page.scss
+++ b/web/src/app/admin/admin.page.scss
@@ -1,3 +1,9 @@
+.logo {
+	width: 55px;
+    height: 55px;
+    margin-left: 10px;
+}
+
 ion-menu-toggle > ion-item {
 	margin-top: 10px !important;
 	margin-bottom: 10px !important;
