--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -1,6 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>admin</ion-title>
+    <ion-buttons slot="start">
+    <img class="logo" src="./../../../../../assets/images/logo.png">
+    </ion-buttons>
+    <ion-title>Track Me</ion-title>
+    <ion-buttons slot="end">
+      <ion-button title="Profile">
+        <ion-icon name="contact"></ion-icon>
+      </ion-button>
+      <ion-button title="Logout" (click)="logout($event)">
+        <ion-icon name="log-out"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
