--- a/web/src/app/admin/accounts/accounts.page.html
+++ b/web/src/app/admin/accounts/accounts.page.html
@@ -8,14 +8,11 @@
       </ion-col>
     </ion-row>
     <ion-row class="border-bottom">
-      <ion-col size="3">
+      <ion-col size="4">
         <b>Name</b>
       </ion-col>
-      <ion-col size="3">
+      <ion-col size="4">
         <b>Email</b>
-      </ion-col>
-      <ion-col size="2">
-        <b>Mobile Number</b>
       </ion-col>
       <ion-col size="3">
         <b>Role</b>
@@ -28,17 +25,14 @@
       class="border-bottom log p-t-b-10" 
       align-items-center *ngFor="let user of users"
       (click)="viewUser(user)">
-      <ion-col size="3">
+      <ion-col size="4">
         {{ user.firstName + ' ' + user.middleName + ' ' + user.lastName }}
       </ion-col>
-      <ion-col size="3">
+      <ion-col size="4">
         {{ user.email }}
       </ion-col>
-      <ion-col size="2">
-        {{ user.mobileNumber }}
-      </ion-col>
       <ion-col size="3">
-        {{ user.role }}
+        {{ user.userType }}
       </ion-col>
       <ion-col size="1" *ngIf="user.isActive">
         Active
