--- a/web/src/app/admin/accounts/accounts-update/accounts-update.page.html
+++ b/web/src/app/admin/accounts/accounts-update/accounts-update.page.html
@@ -22,7 +22,7 @@
                 placeholder="Select Account Type"
                 [value]="userType"
                 [(ngModel)]="userType"
-                formControlName="accountType"
+                formControlName="userType"
                 (ionChange)="resolveAccountType()">
                 <ion-select-option [value]="USER_TYPE_VALUES[u]" *ngFor="let u of USER_TYPE_KEYS">
                   {{ USER_TYPE_VALUES[u] }}
@@ -35,7 +35,7 @@
           <ion-col>
             <ion-item>
               <ion-label position="floating">Student Number</ion-label>
-              <ion-input formControlName="studentNumber" type="number"></ion-input>
+              <ion-input formControlName="studentId" type="number"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -84,7 +84,7 @@
             <ion-button color="light" (click)="dismiss()">
               Cancel
             </ion-button>
-            <ion-button [disabled]="accountForm.invalid || callInProgress" (click)="updateAccount()">
+            <ion-button [disabled]="accountForm.invalid" (click)="updateAccount()">
               <ion-label>Update</ion-label>
             </ion-button>
           </ion-col>
