--- a/web/src/app/admin/fields/fields-view/fields-view.page.html
+++ b/web/src/app/admin/fields/fields-view/fields-view.page.html
@@ -23,6 +23,16 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
+          <b>Field Type</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>{{ field.fieldType }}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
           <b>Field Admin</b>
         </ion-label>
       </ion-col>
