Integrate field crud.

--- a/web/src/app/admin/field-groups/field-groups.page.html
+++ b/web/src/app/admin/field-groups/field-groups.page.html
@@ -12,7 +12,7 @@
         <b>Name</b>
       </ion-col>
       <ion-col size="3">
-        <b>Rotation Type</b>
+        <b>Field Group Type</b>
       </ion-col>
       <ion-col size="2">
         <b>Status</b>
@@ -26,7 +26,7 @@
         {{ g.name }}
       </ion-col>
       <ion-col size="3">
-        {{ g.rotationType }}
+        {{ g.fieldGroupType }}
       </ion-col>
       <ion-col size="2" *ngIf="g.isActive">
         Active
