Integrated field group update.

--- a/web/src/app/admin/field-groups/field-groups-update/field-groups-update.page.html
+++ b/web/src/app/admin/field-groups/field-groups-update/field-groups-update.page.html
@@ -15,34 +15,48 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Fields</ion-label>
+              <ion-label position="floating">Field Group Type</ion-label>
               <ion-select 
                 interface="popover" 
+                placeholder="Select Field Group Type"
+                [value]="fieldGroupType"
+                [(ngModel)]="fieldGroupType"
+                formControlName="fieldGroupType"
+                (ionChange)="resolveFieldGroupType()">
+                <ion-select-option [value]="FIELD_GROUP_TYPE_VALUES[u]" *ngFor="let u of FIELD_GROUP_TYPE_KEYS">
+                  {{ FIELD_GROUP_TYPE_VALUES[u] }}
+                </ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row *ngIf="fieldsToDisplay.length > 0">
+          <ion-col>
+            <ion-item>
+              <ion-label position="floating">Fields</ion-label>
+              <ion-select 
+                interface="alert" 
                 placeholder="Select Fields"
                 formControlName="fields"
                 multiple
                 [value]="selectedFields">
-                <ion-select-option [value]="f.id" *ngFor="let f of fields">
+                <ion-select-option [value]="f._id" *ngFor="let f of fieldsToDisplay">
                   {{ f.name }}
                 </ion-select-option>
               </ion-select>
             </ion-item>
           </ion-col>
         </ion-row>
+        <ion-row *ngIf="fieldsToDisplay.length === 0">
+          <ion-col>
+            <ion-label class="error">Please create a field for this type</ion-label>
+          </ion-col>
+        </ion-row>
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Rotation Type</ion-label>
-              <ion-select 
-                interface="popover" 
-                placeholder="Select Rotation Type"
-                [value]="rotationType"
-                [(ngModel)]="rotationType"
-                formControlName="rotationType">
-                <ion-select-option [value]="ROTATION_TYPE_VALUES[u]" *ngFor="let u of ROTATION_TYPE_KEYS">
-                  {{ ROTATION_TYPE_VALUES[u] }}
-                </ion-select-option>
-              </ion-select>
+              <ion-label>Active</ion-label>
+              <ion-checkbox slot="start" formControlName="isActive"></ion-checkbox>
             </ion-item>
           </ion-col>
         </ion-row>
