--- a/web/src/app/admin/field-groups/field-groups-create/field-groups-create.page.html
+++ b/web/src/app/admin/field-groups/field-groups-create/field-groups-create.page.html
@@ -30,7 +30,7 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <ion-row>
+        <ion-row *ngIf="fieldsToDisplay.length > 0">
           <ion-col>
             <ion-item>
               <ion-label position="floating">Fields</ion-label>
@@ -39,11 +39,16 @@
                 placeholder="Select Fields"
                 formControlName="fields"
                 multiple>
-                <ion-select-option [value]="f.id" *ngFor="let f of fieldsToDisplay">
+                <ion-select-option [value]="f._id" *ngFor="let f of fieldsToDisplay">
                   {{ f.name }}
                 </ion-select-option>
               </ion-select>
             </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row *ngIf="fieldsToDisplay.length === 0">
+          <ion-col>
+            <ion-label class="error">Please create a field for this type</ion-label>
           </ion-col>
         </ion-row>
         <ion-row text-right>
