--- a/web/src/app/admin/field-groups/field-groups-view/field-groups-view.page.html
+++ b/web/src/app/admin/field-groups/field-groups-view/field-groups-view.page.html
@@ -23,11 +23,11 @@
     <ion-row>
       <ion-col size="3">
         <ion-label>
-          <b>Rotation Type</b>
+          <b>Field Group Type</b>
         </ion-label>
       </ion-col>
       <ion-col size="9">
-        <ion-label>{{ fieldGroup.rotationType }}</ion-label>
+        <ion-label>{{ fieldGroup.fieldGroupType }}</ion-label>
       </ion-col>
     </ion-row>
     <ion-row>
