--- a/web/src/app/admin/group-assignments/group-assignments.page.html
+++ b/web/src/app/admin/group-assignments/group-assignments.page.html
@@ -30,7 +30,7 @@
               {{ g.name }}
             </ion-col>
             <ion-col size="4">
-              {{ g.users.length }}
+              {{ g.students.length }}
             </ion-col>
           </ion-row>
         </ion-grid>
@@ -39,7 +39,7 @@
         <ion-grid class="u-container">
           <ion-row class="border-bottom">
             <ion-col size="3">
-              <b>ID</b>
+              <b>Student ID</b>
             </ion-col>
             <ion-col size="6">
               <b>Name</b>
@@ -50,17 +50,17 @@
           </ion-row>
           <ion-row 
             class="border-bottom log p-t-b-10" 
-            align-items-center *ngFor="let user of currentGroup?.users; let i = index">
+            align-items-center *ngFor="let student of currentGroup?.students; let i = index">
             <ion-col size="3">
-              {{ user.studentNumber }}
+              {{ student.studentId }}
             </ion-col>
             <ion-col size="6">
-              {{ user.firstName + ' ' + user.lastName }}
+              {{ student.firstName + ' ' + student.lastName }}
             </ion-col>
             <ion-col size="3">
               <ion-select 
                 interface="popover"
-                (ionChange)="setGroup(user, $event)">
+                (ionChange)="setGroup(student, $event)">
                 <ion-select-option [selected]="g.id === currentGroup.id" [value]="g" *ngFor="let g of groups">
                   {{ g.name }}
                 </ion-select-option>
