Removed unassigned group from UI.

--- a/web/src/app/admin/admin.page.html
+++ b/web/src/app/admin/admin.page.html
@@ -21,25 +21,25 @@
       <ion-content>
         <ion-list lines="none">
           <ion-menu-toggle auto-hide="false">
-            <ion-item a href="/admin/accounts">
+            <ion-item a [routerLink]="['/admin/accounts']">
               <ion-label>Accounts</ion-label>
             </ion-item>      
-            <ion-item a href="/admin/fields">
+            <ion-item a [routerLink]="['/admin/fields']">
               <ion-label>Fields</ion-label>
             </ion-item>
-            <ion-item a href="/admin/field-groups">
+            <ion-item a [routerLink]="['/admin/field-groups']">
               <ion-label>Field Groups</ion-label>
             </ion-item>
-            <ion-item a href="/admin/schedules">
+            <ion-item a [routerLink]="['/admin/schedules']">
               <ion-label>Schedules</ion-label>
             </ion-item>
-            <ion-item a href="/admin/schedules-overview">
+            <ion-item a [routerLink]="['/admin/schedules-overview']">
               <ion-label>Overview of Schedules</ion-label>
             </ion-item>
-            <ion-item a href="/admin/group-assignments">
+            <ion-item a [routerLink]="['/admin/group-assignments']">
               <ion-label>Group Assignments</ion-label>
             </ion-item>
-            <ion-item a href="/admin/rotations">
+            <ion-item a [routerLink]="['/admin/rotations']">
               <ion-label>Rotations</ion-label>
             </ion-item>
           </ion-menu-toggle>
