--- a/web/src/app/student/student-rotations/student-rotations.page.html
+++ b/web/src/app/student/student-rotations/student-rotations.page.html
@@ -1,9 +1,51 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>student-rotations</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <ion-grid fixed class="p-25">
+    <ion-row class="border-bottom">
+      <ion-col size="2">
+        <b>Field</b>
+      </ion-col>
+      <ion-col size="2">
+        <b>Start Date</b>
+      </ion-col>
+      <ion-col size="2">
+        <b>End Date</b>
+      </ion-col>
+      <ion-col size="2">
+        <b>Group</b>
+      </ion-col>
+      <ion-col size="2">
+        <b>Grade</b>
+      </ion-col>
+      <ion-col size="2">
+        <b>Status</b>
+      </ion-col>
+    </ion-row>
+    <ion-row 
+      class="border-bottom log p-t-b-10" 
+      align-items-center *ngFor="let assignment of assignments"
+      (click)="viewRotation(assignment)">
+      <ion-col size="2">
+        {{ getFieldName(assignment.rotation) }}
+      </ion-col>
+      <ion-col size="2">
+        {{ assignment.rotation.schedule.startDate | date: 'MMM dd, yyyy' }}
+      </ion-col>
+      <ion-col size="2">
+        {{ assignment.rotation.schedule.endDate | date: 'MMM dd, yyyy' }}
+      </ion-col>
+      <ion-col size="2">
+        {{ assignment.group.name }}
+      </ion-col>
+      <ion-col size="2">
+        {{ assignment.grade ? assignment.grade : ' -- ' }}
+      </ion-col>
+      <ion-col size="2" *ngIf="assignment.isActive && assignment.isCompleted">
+        Completed
+      </ion-col>
+      <ion-col size="2" *ngIf="assignment.isActive && !assignment.isCompleted">
+        Incomplete
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+  
