--- a/web/src/app/student/student-rotations/student-rotations.page.html
+++ b/web/src/app/student/student-rotations/student-rotations.page.html
@@ -23,7 +23,7 @@
     <ion-row 
       class="border-bottom log p-t-b-10" 
       align-items-center *ngFor="let assignment of assignments"
-      (click)="viewRotation(assignment)">
+      (click)="viewAssignment(assignment)">
       <ion-col size="2">
         {{ getFieldName(assignment.rotation) }}
       </ion-col>
