--- a/web/src/app/student/student.page.html
+++ b/web/src/app/student/student.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>Track Me</ion-title>
     <ion-buttons slot="end">
-      <ion-button title="Profile">
+      <ion-button title="Profile" (click)="viewProfile()">
         <ion-icon name="contact"></ion-icon>
       </ion-button>
       <ion-button title="Logout" (click)="logout($event)">
