--- a/web/src/app/admin/group-assignments/group-assignments.page.html
+++ b/web/src/app/admin/group-assignments/group-assignments.page.html
@@ -27,7 +27,7 @@
             </ion-col>
           </ion-row>
           <ion-row 
-            class="border-bottom log p-t-b-10" 
+            class="border-bottom p-t-b-10" 
             align-items-center>
             <ion-col size="8">
               Unassigned
@@ -37,7 +37,7 @@
             </ion-col>
           </ion-row>
           <ion-row 
-            class="border-bottom log p-t-b-10" 
+            class="border-bottom p-t-b-10" 
             align-items-center *ngFor="let g of groups">
             <ion-col size="8">
               {{ g.name }}
