--- a/web/src/app/student/student-profile/student-profile.page.html
+++ b/web/src/app/student/student-profile/student-profile.page.html
@@ -4,7 +4,7 @@
       <ion-list>
         <ion-row>
           <ion-col>
-            <h3>Profile Information</h3>
+            <h3>Update profile information</h3>
           </ion-col>
           <ion-col text-right>
             <ion-button fill="clear" color="dark" (click)="dismiss()">
@@ -15,8 +15,8 @@
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Student ID</ion-label>
-              <ion-input formControlName="studentId" type="number"></ion-input>
+              <ion-label position="floating">Student Number</ion-label>
+              <ion-input formControlName="studentId"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -61,7 +61,25 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col class="m-t-20">
+          <ion-col>
+            <ion-item>
+              <ion-label position="floating">Group</ion-label>
+              <ion-select 
+                interface="popover" 
+                placeholder="Select Group"
+                formControlName="group"
+                [(ngModel)]="currentGroup">
+                <ng-container *ngFor="let group of groups">
+                  <ion-select-option [value]="group._id">
+                    {{ group.name }}
+                  </ion-select-option>
+                </ng-container>
+              </ion-select>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row class="m-t-20">
+          <ion-col>
             <b>Person to contact in case of emergency</b>
           </ion-col>
         </ion-row>
@@ -81,22 +99,12 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <!-- TODO: Move to student update -->
-        <!-- 
-        <ion-row>
-          <ion-col>
-            <ion-item>
-              <ion-label position="floating">Password</ion-label>
-              <ion-input formControlName="password" type="password"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row> -->
         <ion-row text-right>
           <ion-col size="12">
             <ion-button color="light" (click)="dismiss()">
               <ion-label>Cancel</ion-label>
             </ion-button>
-            <ion-button [disabled]="accountForm.invalid || callInProgress" (click)="updateAccount()">
+            <ion-button [disabled]="accountForm.invalid || callInProgress" (click)="updateProfile()">
               <ion-label>Save</ion-label>
             </ion-button>
           </ion-col>
