--- a/web/src/app/student/student-rotations/view-student-assignment/view-student-assignment.page.html
+++ b/web/src/app/student/student-rotations/view-student-assignment/view-student-assignment.page.html
@@ -1,9 +1,83 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>view-student-assignment</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+  <ion-grid padding fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Assignment Information</h3>
+      </ion-col>
+      <ion-col text-right>
+        <ion-button fill="clear" color="dark" (click)="dismiss()">
+          <ion-icon name="close"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Field Name</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>{{ assignment.field.name }}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Group</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>{{ assignment.group.name }}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Schedule</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>{{ (assignment.rotation.schedule.startDate | date: 'MMM dd, yyyy') + ' - ' + (assignment.rotation.schedule.endDate | date: 'MMM dd, yyyy') }}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Status</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label *ngIf="assignment.isActive && assignment.isCompleted">
+          Completed
+        </ion-label>
+        <ion-label *ngIf="assignment.isActive && !assignment.isCompleted">
+          Incomplete
+        </ion-label>
+        <ion-label *ngIf="!assignment.isActive">
+          Inactive
+        </ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Grade</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>{{ assignment.grade ? assignment.grade : ' -- ' }}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
+          <b>Remarks</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>{{ assignment.remarks ? assignment.remarks : ' -- ' }}</ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+  
