Integrated change password.

--- a/web/src/global.scss
+++ b/web/src/global.scss
@@ -27,6 +27,10 @@
     width: 60%;
 }
 
+.smaller-custom-popover .popover-content {
+    width: 40%;
+}
+
 .input-hidden {
     position: absolute !important;
     left: -999em !important;
