--- a/web/src/app/admin/admin-profile/admin-profile.page.html
+++ b/web/src/app/admin/admin-profile/admin-profile.page.html
@@ -73,16 +73,11 @@
             </ion-item>
           </ion-col>
         </ion-row>
-        <!-- TODO: Move to student update -->
-        <!-- 
-        <ion-row>
+        <ion-row class="m-t-20">
           <ion-col>
-            <ion-item>
-              <ion-label position="floating">Password</ion-label>
-              <ion-input formControlName="password" type="password"></ion-input>
-            </ion-item>
+            <ion-button fill="clear" (click)="updatePassword()">Change Password</ion-button>
           </ion-col>
-        </ion-row> -->
+        </ion-row>
         <ion-row text-right>
           <ion-col size="12">
             <ion-button color="light" (click)="dismiss()">
