--- a/web/src/app/field-admin/field-admin-profile/field-admin-profile.page.html
+++ b/web/src/app/field-admin/field-admin-profile/field-admin-profile.page.html
@@ -73,6 +73,11 @@
             </ion-item>
           </ion-col>
         </ion-row>
+        <ion-row class="m-t-20">
+          <ion-col>
+            <ion-button fill="clear" (click)="updatePassword()">Change Password</ion-button>
+          </ion-col>
+        </ion-row>
         <ion-row text-right>
           <ion-col size="12">
             <ion-button color="light" (click)="dismiss()">
